[metadata]
name = pytest-gitbark
version = 0.0.1
description = A pytest plugin for testing gitbark rules and commands

[options]
packages = pytest_gitbark

[options.extras_require]
dev =
    pytest
    gitbark @ git+https://github.com/YubicoLabs/gitbark.git

[options.entry_points]
pytest11 =
    automock = pytest_gitbark.plugin